--- a/nrf_firmware/.vscode/settings.json
+++ b/nrf_firmware/.vscode/settings.json
@@ -1,6 +1,14 @@
 {
   "files.associations": {
     "imu_service.h": "c",
-    "uuid.h": "c"
+    "uuid.h": "c",
+    "ratio": "c",
+    "system_error": "c",
+    "array": "c",
+    "functional": "c",
+    "tuple": "c",
+    "type_traits": "c",
+    "utility": "c",
+    "string.h": "c"
   }
 }
